# robots

./: .gitmodules
arena_robots/: CMakeLists.txt  package.xml
arena_robots/arena_robots/: Robot.py  SetupFile.py  __init__.py
arena_robots/config/setup/: all_robots.yaml  demo.yaml
arena_robots/robots/WLP311D/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/WLP311D/urdf/: WLP311D.urdf.xacro
arena_robots/robots/WLP311E/: control.yaml  model_params.yaml
arena_robots/robots/WLP311E/urdf/: WLP311E.urdf.xacro
arena_robots/robots/boxer/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/boxer/urdf/: boxer.gazebo  boxer.urdf.xacro
arena_robots/robots/dingo/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/husky/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/jackal/: jackal.model.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/rbkairos/: control.yaml  model_params.yaml
arena_robots/robots/rbrobout/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/rbsummit/: control.yaml  model_params.yaml  rbsummit_controller_params.yaml
arena_robots/robots/rbtheron/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/rbvogui/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/ridgeback/: control.yaml  model_params.yaml
arena_robots/robots/rskomnidirectional/: control.yaml  mappings.yaml  model_params.yaml
arena_robots/robots/turtlebot/: control.yaml  mappings.yaml  model_params.yaml
(+439 files in other folders)
