<?xml version="1.0"?>
<package format="2">
  <name>arena_robots</name>
  <version>0.1.0</version>
  <description>
    Arena robots descriptions and deps.
  </description>
  <maintainer email="dev@voshch.dev">Volodymyr Shcherbyna</maintainer>
  <author email="dev@voshch.dev">Volodymyr Shcherbyna</author>

  <license>MIT</license>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>arena_simulation_setup</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
